--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,17 +3,51 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
-  
-   <servlet>
-     <servlet-name>AddMobile</servlet-name>
-     <servlet-class>com.jsp.servlet.mobiledb.AddMobileServlet</servlet-class>
-  </servlet>
-  <!-- Servlet mapping -->
-  
-  <servlet-mapping>
-              <servlet-name>AddMobile</servlet-name>
-              <url-pattern>/add-mobile</url-pattern>
-  </servlet-mapping>
-  
+	<display-name>Archetype Created Web Application</display-name>
+
+	<servlet>
+		<servlet-name>AddMobile</servlet-name>
+		<servlet-class>com.jsp.servlet.mobiledb.AddMobileServlet</servlet-class>
+	</servlet>
+	<!-- Servlet mapping -->
+
+	<servlet>
+		<servlet-name>UpdateMobile</servlet-name>
+		<servlet-class>com.jsp.servlet.mobiledb.UpdateMobileServlet</servlet-class>
+	</servlet>
+
+
+
+	<servlet>
+		<servlet-name>DeleteMobile</servlet-name>
+		<servlet-class>com.jsp.servlet.mobiledb.DeleteMobileServlet</servlet-class>
+	</servlet>
+	
+	<servlet>
+		<servlet-name>Display-All</servlet-name>
+		<servlet-class>com.jsp.servlet.mobiledb.DisplayAllMobileServlet</servlet-class>
+	</servlet>
+	<!-- Servlet mapping -->
+
+	<servlet-mapping>
+		<servlet-name>AddMobile</servlet-name>
+		<url-pattern>/add-mobile</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>DeleteMobile</servlet-name>
+		<url-pattern>/delete-mobile</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>UpdateMobile</servlet-name>
+		<url-pattern>/update-mobile</url-pattern>
+	</servlet-mapping>
+	
+	
+	<servlet-mapping>
+		<servlet-name>Display-All</servlet-name>
+		<url-pattern>/display-all-mobile</url-pattern>
+	</servlet-mapping>
+
 </web-app>
